Initial for appointment list template in doctors dashboard.

--- a/customers/templates/auth/login.html
+++ b/customers/templates/auth/login.html
@@ -24,12 +24,11 @@
     Login
  {% endblock %}
  {% block content %}
- <br>
- <br> <br>
- <br>
- <br>
- <br>
- <div class="container">
+ <div class="container-fluid" style="background-color: 	#FAF0E6"> <br>
+  <br> <br>
+  <br>
+  <br>
+  <br>
           <div class="container col-lg-6">
             <form class = "bg-light" method="POST" style = "border-radius:10px; padding: 20px">
               {% csrf_token %}
@@ -64,9 +63,9 @@
                 </div>
             </form>
           </div>
-      </div>
-      <div style = "height:250px">
+          <div style = "height:250px">
 
+          </div>
       </div>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
