--- a/customers/templates/base_layout/new_layout.html
+++ b/customers/templates/base_layout/new_layout.html
@@ -15,6 +15,7 @@
     <title>{% block title %}{% endblock %}</title>
 
     <!-- Custom fonts for this template-->
+    <link rel="stylesheet" type="stylesheet" href="jquery.datetimepicker.css"/>
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -53,17 +54,17 @@
             <a class="nav-link font" aria-current="page" href="{% url 'customers:home_view' %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link font" href="{% url 'customers:blogs_view' %}">Blogs</a>
+            <a class="nav-link font nav-selector" href="{% url 'customers:blogs_view' %}">Blogs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link font" href="{% url 'customers:appointment_view' %}">Appointment</a>
+            <a class="nav-link font nav-selector" href="{% url 'customers:appointment_view' %}">Appointment</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link font" href="">Services</a>
+            <a class="nav-link font nav-selector" href="">Services</a>
           </li>
           {% if request.user.is_authenticated %}
               <li class="nav-item dropdown no-arrow font">
-                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                <a class="nav-link dropdown-toggle nav-selector" href="#" id="userDropdown" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     
                     <span class="mr-2 d-none d-lg-inline small font">{{user.username}}</span>
@@ -90,7 +91,7 @@
                         Activity Log
                     </a> -->
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'customers:logout_view' %}" >
+                    <a class="dropdown-item nav-selector" href="{% url 'customers:logout_view' %}" >
                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                         Logout
                     </a>
@@ -135,12 +136,15 @@
 <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
 
 <!-- Page level plugins -->
-<script src="{% static 'vendor/chart.js/Chart.min.js' %}"></script>
+
 
 <!-- Page level custom scripts -->
 <script src="{% static 'js/demo/chart-area-demo.js' %}"></script>
 <script src="{% static 'js/demo/chart-pie-demo.js' %}"></script>
-
+<script>
+ 
+   
+</script>
 </body>
 
 </html>
