--- a/customers/templates/auth/signup.html
+++ b/customers/templates/auth/signup.html
@@ -6,12 +6,12 @@
 
 
 {% block content %}
-<br>
-<br> <br>
-<br>
-<br>
 
-<div class="container">
+
+<div class="container-fluid" style="background-color: 	#FAF0E6"><br>
+    <br> <br>
+    <br>
+    <br>
     <div class="container col-lg-6">
         <form method="POST" enctype="multipart/form-data" class="form-group bg-light" style = "border-radius:10px; padding: 20px">
             {% csrf_token %}
@@ -48,10 +48,11 @@
             </div>
         </form>
     </div>
-</div>
-<div class="container" style = "margin-top:130px">
+    <div class="container" style = "height:130px">
 
+    </div>
 </div>
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
