--- a/customers/templates/pages/appointment.html
+++ b/customers/templates/pages/appointment.html
@@ -1,206 +1,137 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-
+{% extends 'base_layout/new_layout.html' %}
+{% load static %}
+{% block style %}
   
+  <style>
 
+  </style>
+{% endblock %}
+  {% block title %}
+    Appointment
+  {% endblock %}
   
+{% block content %}
+<div style="background-color: #7b716f; padding: 30px;"><br><br><br><br><br><br>
+  <div class="col-md-4 offset-md-4 col-sm-12" style="padding: 30px; background-color: #f4f4f4; border-radius: 10px;">
+    <h2 class="text-center">Appointment Request</h2><hr>
+    <div class="form-group">
+        <div id = "error">
+          
+        </div>
+        <label>Description</label>
+        <textarea class="form-control" name="description" id="description" >
 
-<style>
-  
-    #appointment-header
-    {
-      width:auto;
-      margin:0px auto;
-      text-align:center;
-      font-size:25px;
-    }
-    form {
-      max-width: 480px;
-      margin: 10px auto;
-      padding: 10px 20px;
-      background: #f4f7f8;
-      border-radius: 8px;
-    }
-
-    h1 {
-      margin: 0 0 30px 0;
-      text-align: center;
-    }
-
-    input[type="text"],
-    input[type="date"],
-    input[type="datetime"]{
-      background: rgba(255,255,255,0.1);
-      border: none;
-      font-size: 16px;
-      height: auto;
-      margin: auto;
-      outline: 0;
-      padding: 8px;
-      width: 100%;
-      background-color: #e8eeef;
-      color: black;
-      box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-      margin-bottom: 30px;
-    }
-    fieldset {
-      margin-bottom: 30px;
-      border: none;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 8px;
-    }
-
-    label.light {
-      font-weight: 300;
-      display: inline;
-    }
-    
-</style>
-</head>
-<body>
-<br><br><br><br><br>
-<div id="container-fluid">
-  <!--This is a division tag for body container-->
-  <div id="appointment-header">
-    <!--This is a division tag for body header-->
-    <h1>Appointment Request Form</h1>
-    <div id = "instruction" class = "text-info" style = "margin:0px auto; font-size: 16px; max-width: 500px;">Please Select Date And Time To Request An Appointment</div>
+        </textarea>
+    </div>
+    <div class="form-group">
+        <label>Schedule</label>
+        <div class="row">
+          <div class="col">
+            <input class="form-control" type="date" id="date" name = "date" />
+          </div>
+          <div class="col">
+            <select class = "form-control" name="time" id="time">
+                <option class = "form-control" value="">hh:mm</option>
+                <option class = "form-control" value="08:30">08:30</option>
+                <option class = "form-control" value="09:00">09:00</option>
+                <option class = "form-control" value="09:30">09:30</option>
+                <option class = "form-control" value="10:00">10:00</option>
+                <option class = "form-control" value="10:30">10:30</option>
+                <option class = "form-control" value="11:00">11:00</option>
+                <option class = "form-control" value="11:30">11:30</option>
+                <option class = "form-control" value="13:30">13:30</option>
+                <option class = "form-control" value="14:00">14:00</option>
+                <option class = "form-control" value="14:30">14:30</option>
+                <option class = "form-control" value="15:00">15:00</option>
+                <option class = "form-control" value="15:30">15:30</option>
+                
+            </select>
+          </div>
+        </div>
+       
+    </div>
+    <div class="form-group">
+      <input class="btn btn-success form-control" type="submit" id="submit" value="Validate Request" />
+  </div>
+  </div><br>
+  <div style="height: 300px;">
 
   </div>
-  <form method="POST" action="{% url 'customers:save_appointment_view' %}">
-    {% csrf_token %}
-    <fieldset>
-          <div class="form-group">
-            <label for="name">Description *:</label>
-            <div id = "error">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'js/jquery.js' %}"></script>
 
-            </div>
-            <textarea  class = "form-control" name="description" id="description" >
+    <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script>
+      $(function(){
+        var dtToday = new Date();
+        
+        var month = dtToday.getMonth() + 1;
+        var day = dtToday.getDate();
+        var year = dtToday.getFullYear();
+        if(month < 10)
+            month = '0' + month.toString();
+        if(day < 10)
+            day = '0' + day.toString();
+        
+        var minDate= year + '-' + month + '-' + day;
+        
+        $('#date').attr('min', minDate);
+    });
+    $(document).ready(function(){
+        $('#submit').click(function(){
+          let description = $.trim($('#description').val());
+          let date = document.querySelector('#date').value;
+          let formated_date = date.replaceAll("-", "/");
+          let time = document.querySelector('#time').value;
+          let schedule = `${formated_date} ${time}`;
 
-            </textarea>
-          </div>
-          <div class="form-group">
-            <label>Date Time Picker</label>
-            <input id = "schedule" type="text" class="form-control datetimepicker">
-          </div>
-         
-    </fieldset>
-    <input type="submit" value="Save">
-  </form>
-  <div style = "height:250px">
-
-  </div>
-</div>
-
-
-
-<script src="https://code.jquery.com/jquery-2.2.4.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
-        <script src="jquery.datetimepicker.js"></script>
-
-<script>
-
-$(document).ready(function(){
-
-  $('#schedule').datetimepicker({
-    format:'Y/m/d H:i',
-    formatTime:'H:i',
-    formatDate:'Y/m/d',
-    startDate: false,
-    minDate:true,
-
-    maxDate:false,
-
-    minTime:'08:00',
-    maxTime:'16:00',
-    // defaultTime:'15:30',
-    minDateTime:true,
-    closeOnDateSelect:false,
-    step: 30,
-
-  closeOnTimeSelect:true,
-
-  closeOnWithoutClick:false,
-
-  closeOnInputClick:false,
-
-  openOnFocus:true,
-
-
-    maxDateTime:false,
-    dayOfWeekStart: 1,
-    scrollMonth:true,
-    scrollTime:true,
-    monthStart: 0,
-
-    monthEnd: 11,
-    // disabledDates : ["2021/08/25"],
-    touchMovedThreshold: 5,
-    timeHeightInTimePicker: 25,
-    scrollMonth:true,
-
-    scrollTime:true,
-
-    scrollInput:true,
-   
-    allowTimes: ['08:30','09:00','09:30','10:00','10:30','11:00','11:30','13:30','14:00','14:30','15:00','15:30'],
-    onSelectTime:function () {
-      $('#verefying').html('<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 100%; border-radius:10px" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Validating Schedule...</div><br>');
-        $.ajax({
-             type : "POST",
-             url : "{% url 'customers:verefy_schedule_view' %}",
-             data:{
-                  schedule:$('#schedule').val()
-             },
-             success:function(response){
-                if(response == 1){
-                  $('#verefying').html('<div class = "alert alert-danger">Schedule is already taken <br> Please adkjust your date or time</div>');
-                }else{
-                  let description = $.trim($('#description').val());
-                  if(description != ""){
-                      $('#verefying').html('<div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%; border-radius:10px" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Saving Request</div><br>');
-                      $('#error').html('');
+          if(description != "" && date != "" && time != ""){
+              $('#error').html('<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 100%; border-radius:10px" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Validating Schedule</div><br>');
+              $.ajax({
+                type : 'POST',
+                url : "{% url 'customers:verefy_schedule_view' %}",
+                data : {
+                  schedule : schedule
+                },
+                success:function(response){
+                    if(response == 0){
+                      $('#error').html('<div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%; border-radius:10px" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Saving Request</div><br>');
                       $.ajax({
-                          type : 'POST',
-                          url: "{% url 'customers:save_appointment_view' %}",
-                          data :{
-                            description:description,
-                            schedule:$('#schedule').val()
-                          },success:function(response){
-                            $('#verefying').html('');
-                              $('#instruction').html('<div class = "alert alert-info">'+response+'</div>');
-                                $('#description').val('');
-                                $('#schedule').val('');
-                              setTimeout(() => {
-                                $('#instruction').html('Please Select Date And Time To Request An Appointment');
-                              }, 10000);
-                          }
-                      });
+                        type : "POST",
+                        url : "{% url 'customers:save_appointment_view' %}",
+                        data : {
+                          description : description,
+                          schedule : schedule
+                        },
+                        success:function(response){
+                          $('#description').val('');
+                          $('#date').val("");
+                          $('#time').val("");
+                          $('#error').html(`<div class = "alert alert-info">${response}</div>`);
+                          setTimeout(() => {
+                            $('#error').html("");
+                          }, 10000);
+                        }
+                      })
                     }else{
-                      $('#error').html('<div class = "alert alert-danger">Please put a description</div>')
-                      $('#verefying').html('');
-
+                      $('#error').html('<div class = "alert alert-danger">This Schedule Is Already Taken, Please Try Another</div>');
                     }
                 }
-             }
-        });
-    },
-   
-     
-  })
- 
-})
+              });
+          }else{
+              $('#error').html('<div class = "alert alert-danger">Please Fill All Fields</div>');
+          }
+        })
+    })
+  
+    </script>
 
-</script>
+</div>
+{% endblock %}
 
-</body>
-</html>
