--- a/customers/templates/pages/appointment.html
+++ b/customers/templates/pages/appointment.html
@@ -11,7 +11,7 @@
   {% endblock %}
   
 {% block content %}
-<div style="background-color: #7b716f; padding: 30px;"><br><br><br><br><br><br>
+<div style="background-color: #7b716f; padding: 30px;"><br><br><br><br><br>
   <div class="col-md-4 offset-md-4 col-sm-12" style="padding: 30px; background-color: #f4f4f4; border-radius: 10px;">
     <h2 class="text-center">Appointment Request</h2><hr>
     <div class="form-group">
@@ -54,9 +54,7 @@
       <input class="btn btn-success form-control" type="submit" id="submit" value="Validate Request" />
   </div>
   </div><br>
-  <div style="height: 300px;">
-
-  </div>
+ 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'js/jquery.js' %}"></script>
