--- a/doctors/templates/doctors/pages/appointment_list.html
+++ b/doctors/templates/doctors/pages/appointment_list.html
@@ -1,8 +1,11 @@
 {% extends 'doctors/doctors_base_layout/layout.html' %}
+{% block style %}
+
+    {% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-8">
             <div class="card">
               <div class="card-header">
                 <h4>Appointments</h4>
@@ -11,20 +14,30 @@
                 <div class="table-responsive table-invoice">
                   <table class="table table-striped">
                     <tbody><tr>
-                      <th>Invoice ID</th>
-                      <th>Customer</th>
+                      <th>Customer Name</th>
+                      <th>Description</th>
                       <th>Status</th>
-                      <th>Due Date</th>
+                      <th>Schedule</th>
                       <th>Action</th>
                     </tr>
                     {% for appointment in appointment_list %}
                     <tr>
                       <td><a href="#">{{appointment.customer}}</a></td>
-                      <td class="font-weight-600">Kusnadi</td>
-                      <td><div class="badge badge-warning">Unpaid</div></td>
+                      <td class="font-weight-600"><p onclick = 'show("{{appointment.description}}")' class="d-inline-block text-truncate" style="max-width: 100px;">{{appointment.description}}</p></td>
+                      <td>{% if appointment.status == 1 %}
+                            <div class="badge badge-success">{{appointment.status}}</div>
+                          {% elif appointment.status == 2 %}
+                            <div class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule">{{appointment.status}}</div>
+                          {% else %}
+                            <div class="badge badge-warning">Unmark</div>
+                          {% endif %}
+                      </td>  
                       <td>{{appointment.schedule}}</td>
                       <td>
-                        <a href="#" class="btn btn-primary">Detail</a>
+                        <a href="#" class="btn btn-success btn-sm" data-toggle="tooltip" data-placement="top" title="Approve" data-original-title="Approve"><i class="fas fa-check"></i></a>
+                        <a href="#" class="btn btn-warning btn-sm" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class='fas fa-calendar-alt'></i></a>
+                        <a href="#" class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></a>
+                        
                       </td>
                     </tr>
                     {% endfor %}
@@ -33,17 +46,43 @@
               </div>
             </div>
           </div>
+          <div class="col-md-4">
+            
+          </div>
     </div>
 </div>
+<!-- read more  modal -->
+<div class="modal fade" id="read_more" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Read More</h5>
+        <button type="button" id= "close" class="btn-close" data-dismiss="modal" aria-label="Close">X</button>
+      </div>
+      <form></form>
+          <div class="modal-body">
+              <p id = "data">
+
+              </p>
+          </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- end modal -->
     <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
     <script>
-        // $(document).ready(function(){
-        //   $('#filter').keyup(function(){
-
-        //   })
-        // })
+        function show(data){
+        $('#data').html(data);
+        $('#read_more').modal('show');
+    }
+    $(document).ready(function(){
+        $('#close').click(function(){
+            $('#read_more').modal('hide');
+        });
+    });
     </script>
 
 {% endblock %}
