Coding for appointment declined in doctors dashboard.

--- a/doctors/templates/doctors/pages/customer_profile.html
+++ b/doctors/templates/doctors/pages/customer_profile.html
@@ -41,7 +41,7 @@
               <h5 class="modal-title" id="exampleModalLabel">Send Email</h5>
               <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">X</button>
             </div>
-            <form></form>
+            <form>
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="recipient" class="col-form-label">From:</label>
