--- a/doctors/templates/doctors/pages/appointment_list.html
+++ b/doctors/templates/doctors/pages/appointment_list.html
@@ -25,41 +25,43 @@
                       </tr>
                       {% for appointment in appointment_list %}
                       <tr>
-                        {% if appointment.status != 1 %}
-                          <td><a href="#">{{appointment.customer}}</a></td>
-                          <td class="font-weight-600"><p onclick = 'show("{{appointment.description}}")' class="d-inline-block text-truncate" style="max-width: 100px;">{{appointment.description}}</p></td>
-                          <td>{% if appointment.status == 1 %}
-                                <div class="badge badge-success">Approved</div>
-                              {% elif appointment.status == 2 %}
-                                <div class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule">ReSchedule</div>
-                              {% else %}
-                                <div class="badge badge-warning">Unmark</div>
-                              {% endif %}
-                          </td>  
-                          <td>{{appointment.schedule}}</td>
-                          <td>
-                            <button class="btn btn-success btn-sm" value="{{appointment.id}}" onclick="approve(this)" data-toggle="tooltip" data-placement="top" title="Approve" data-original-title="Approve"><i class="fas fa-check"></i></button>
-                            <button class="btn btn-warning btn-sm" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class='fas fa-calendar-alt'></i></button>
-                            <button class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>
-                            
-                          </td>
-                        {% else %}
-                          <td><a href="#">{{appointment.customer}}</a></td>
-                            <td class="font-weight-600"><p onclick = 'show("{{appointment.description}}")' class="d-inline-block text-truncate" style="max-width: 100px;">{{appointment.description}}</p></td>
-                            <td>{% if appointment.status == 1 %}
-                                  <div class="badge badge-success">Approved</div>
-                                {% elif appointment.status == 2 %}
-                                  <div class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule">ReSchedule</div>
-                                {% else %}
-                                  <div class="badge badge-warning">Unmark</div>
-                                {% endif %}
-                            </td>  
-                            <td>{{appointment.schedule}}</td>
-                            <td>
-                              <button class="btn btn-warning btn-sm" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class='fas fa-calendar-alt'></i></button>
-                              <button class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>
-                              
-                            </td>
+                        {% if appointment.status != 3 %}
+                            {% if appointment.status != 1 %}
+                              <td><a href="#">{{appointment.customer}}</a></td>
+                              <td class="font-weight-600"><p onclick = 'show("{{appointment.description}}")' class="d-inline-block text-truncate" style="max-width: 100px;">{{appointment.description}}</p></td>
+                              <td>{% if appointment.status == 1 %}
+                                    <div class="badge badge-success">Approved</div>
+                                  {% elif appointment.status == 2 %}
+                                    <div class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule">ReSchedule</div>
+                                  {% else %}
+                                    <div class="badge badge-warning">Unmark</div>
+                                  {% endif %}
+                              </td>  
+                              <td>{{appointment.schedule}}</td>
+                              <td>
+                                <button class="btn btn-success btn-sm" value="{{appointment.id}}" onclick="approve(this, '{{appointment.customer.email}}')" data-toggle="tooltip" data-placement="top" title="Approve" data-original-title="Approve"><i class="fas fa-check"></i></button>
+                                <button class="btn btn-warning btn-sm" value="{{appointment.id}}" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class='fas fa-calendar-alt'></i></button>
+                                <button class="btn btn-danger btn-sm" value="{{appointment.id}}" onclick = "decline(this, '{{appointment.customer.email}}')" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>
+                                
+                              </td>
+                            {% else %}
+                              <td><a href="#">{{appointment.customer}}</a></td>
+                                <td class="font-weight-600"><p onclick = 'show("{{appointment.description}}")' class="d-inline-block text-truncate" style="max-width: 100px;">{{appointment.description}}</p></td>
+                                <td>{% if appointment.status == 1 %}
+                                      <div class="badge badge-success">Approved</div>
+                                    {% elif appointment.status == 2 %}
+                                      <div class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule">ReSchedule</div>
+                                    {% else %}
+                                      <div class="badge badge-warning">Unmark</div>
+                                    {% endif %}
+                                </td>  
+                                <td>{{appointment.schedule}}</td>
+                                <td>
+                                  <button class="btn btn-warning btn-sm" value="{{appointment.id}}" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class='fas fa-calendar-alt'></i></button>
+                                  <button class="btn btn-danger btn-sm" value="{{appointment.id}}" data-toggle="tooltip" onclick = "decline(this, '{{appointment.customer.email}}')" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>
+                                  
+                                </td>
+                            {% endif %}
                         {% endif %}
                       </tr>
                       {% endfor %}
@@ -92,6 +94,48 @@
   </div>
 </div>
 <!-- end modal -->
+<!-- send email modal -->
+<div class="modal fade" id="sent_email_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Appointment Declined</h5>
+        <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">X</button>
+      </div>
+      <form onsubmit="return false">
+          <div class="modal-body">
+              <div class="mb-3">
+                  <div id = "decline_loader">
+
+                  </div>
+                  <label for="recipient" class="col-form-label">From:</label>
+                  <input type="text" class="form-control" value = "beastfriendveterinaryclinic@gmail.com" id="recipient" readonly>
+              </div>
+              <div class="mb-3">
+                  <label for="recipient" class="col-form-label">To:</label>
+                  <input type="text" id = "customer_email" class="form-control" value = "" id="recipient" readonly>
+              </div>
+              <div class="mb-3" id = "error">
+                  
+              </div>
+              <div class="mb-3">
+                  <label for="subject" class="col-form-label">Subject:</label>
+                  <input type="text" class="form-control" maxlength="25" value = "" id="subject" required>
+              </div>
+              <div class="mb-3">
+              <label for="message" class="col-form-label">Reason:</label>
+              <textarea class="form-control" id="reason" required></textarea>
+              </div>
+          </div>
+          <div class="modal-footer">
+          <button id = "send" type="submit" class="btn btn-primary">Send email</button>
+          </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- end modal -->
+
     <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
@@ -106,8 +150,14 @@
         });
         
     });
-    function approve(button){
-      document.querySelector('#loader').innerHTML=' <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 100%; border-radius:10px; " aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Processing...</div>';
+    function approve(button, temp_email){
+      let email = `'${temp_email}'`;
+      let id = button.value;
+
+      $(document).ready(function(){
+
+     
+      document.querySelector('#loader').innerHTML='<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 100%; border-radius:10px; " aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Processing...</div>';
       let row = button.parentNode.parentNode;
       let tr = document.createElement('tr');
 
@@ -127,13 +177,12 @@
       td2.innerHTML=otd2;
       td3.innerHTML='<div class="badge badge-success">Approved</div>';
       td4.innerHTML=otd4;
-      td5.innerHTML='<button class="btn btn-warning btn-sm" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class="fas fa-calendar-alt"></i></button>&nbsp;<button class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>';
-      $(document).ready(function(){
+      td5.innerHTML='<button class="btn btn-warning btn-sm" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class="fas fa-calendar-alt"></i></button>&nbsp;<button class="btn btn-danger btn-sm" onclick = "decline(this,'+email+')" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>';
         $.ajax({
             type:"POST",
             url:"{% url 'doctors:approve_appointment_view' %}",
             data:{
-                appointment_id:button.value
+                appointment_id:id
             },
             success:function(response){
                 $('#loader').html(`<div class = "alert alert-success">${response}</div>`)
@@ -145,8 +194,36 @@
         })
       })
     }
-    function show_alert(){
-      alert('show')
+    function decline(button, email){
+      let id = button.value;
+      let tr = button.parentNode.parentNode;
+      $(document).ready(function(){
+        $('#customer_email').val(email);
+        $('#sent_email_modal').modal('show');
+       
+        $('#send').click(function(){
+          let subject = $.trim($('#subject').val());
+          let reason = $.trim($('#reason').val());
+          if(subject != "" && reason != ""){
+            $('#decline_loader').html('<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 100%; border-radius:10px; " aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Sending email...</div>')
+              $.ajax({
+                type:'POST',
+                url:"{% url 'doctors:decline_appointment_view' %}",
+                data:{
+                    email:email,
+                    subject:subject,
+                    reason:reason,
+                    appointment_id:id
+                },
+                success:function(response){
+                    $('#decline_loader').html('');
+                    $('#sent_email_modal').modal('hide');
+                    tr.parentNode.removeChild(tr);
+                }
+              })
+          }
+        })
+      })
     }
     </script>
 
