--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -144,7 +144,7 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities4"
                     aria-expanded="true" aria-controls="collapseUtilities4">
-                    <img class = "img-fluid" style = "width: 30px; height: 30px; border-radius: 50%;" src="{% static 'Images/blog_logo.png' %}" alt="">
+                    <img class = "img-fluid" style = "width: 30px; height: 30px; border-radius: 50%;" src="{% static 'Images/appointment_logo.png' %}" alt="">
                     <span>Appointments</span>
                 </a>
                 <div id="collapseUtilities4" class="collapse" aria-labelledby="headingUtilities"
@@ -317,7 +317,7 @@
                                         </h6>
                                         <a class="dropdown-item d-flex align-items-center" href="#">
                                             <div class="dropdown-list-image mr-3">
-                                                <img class="rounded-circle" src="img/undraw_profile_1.svg"
+                                                <img class="rounded-circle" src=""
                                                     alt="...">
                                                 <div class="status-indicator bg-success"></div>
                                             </div>
@@ -329,7 +329,7 @@
                                         </a>
                                         <a class="dropdown-item d-flex align-items-center" href="#">
                                             <div class="dropdown-list-image mr-3">
-                                                <img class="rounded-circle" src="img/undraw_profile_2.svg"
+                                                <img class="rounded-circle" src=""
                                                     alt="...">
                                                 <div class="status-indicator"></div>
                                             </div>
@@ -341,7 +341,7 @@
                                         </a>
                                         <a class="dropdown-item d-flex align-items-center" href="#">
                                             <div class="dropdown-list-image mr-3">
-                                                <img class="rounded-circle" src="img/undraw_profile_3.svg"
+                                                <img class="rounded-circle" src=""
                                                     alt="...">
                                                 <div class="status-indicator bg-warning"></div>
                                             </div>
@@ -353,7 +353,7 @@
                                         </a>
                                         <a class="dropdown-item d-flex align-items-center" href="#">
                                             <div class="dropdown-list-image mr-3">
-                                                <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60"
+                                                <img class="rounded-circle" src=""
                                                     alt="...">
                                                 <div class="status-indicator bg-success"></div>
                                             </div>
@@ -466,11 +466,10 @@
 <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
 
 <!-- Page level plugins -->
-<script src="{% static 'vendor/chart.js/Chart.min.js' %}"></script>
+
 
 <!-- Page level custom scripts -->
-<script src="{% static 'js/demo/chart-area-demo.js' %}"></script>
-<script src="{% static 'js/demo/chart-pie-demo.js' %}"></script>
+
 <script>
     // document.addEventListener("DOMContentLoaded",function(){
     //     window.addEventListener('scroll',function(){
