Creating archived appointment list template in doctors dashboard.

--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -151,6 +151,7 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="{% url 'doctors:appointment_list_view' %}">Appointment List</a>
+                        <a class="collapse-item" href="{% url 'doctors:archived_appointment_list_view' %}">Archive Appointments</a>
                     </div>
                 </div>
             </li>
