Creating appointment list template in staff dashboard.

--- a/staff/templates/staff/staff_base_layout/layout.html
+++ b/staff/templates/staff/staff_base_layout/layout.html
@@ -21,7 +21,9 @@
     <!-- Custom styles for this template-->
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
     <link rel="shortcut icon" type="image" href="{% static 'title_logo/title_logo.png' %}">
+    {% block style %}
 
+    {% endblock %}
 </head>
 
 <body id="page-top">
@@ -133,6 +135,20 @@
                         <a class="collapse-item" href="{% url 'staff:blog_list_view' %}">Blog List</a>
                         <a class="collapse-item" href="">Animations</a>
                         <a class="collapse-item" href="">Other</a>
+                    </div>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities4"
+                    aria-expanded="true" aria-controls="collapseUtilities4">
+                    <img class = "img-fluid" style = "width: 30px; height: 30px; border-radius: 50%;" src="{% static 'Images/appointment_logo.png' %}" alt="">
+                    <span>Appointments</span>
+                </a>
+                <div id="collapseUtilities4" class="collapse" aria-labelledby="headingUtilities"
+                    data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="{% url 'staff:appointment_list_view' %}">Appointment List</a>
+                        <a class="collapse-item" href="">Archive Appointments</a>
                     </div>
                 </div>
             </li>
