Creating archive appointment list in staff dashboard.

--- a/staff/templates/staff/staff_base_layout/layout.html
+++ b/staff/templates/staff/staff_base_layout/layout.html
@@ -148,7 +148,7 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="{% url 'staff:appointment_list_view' %}">Appointment List</a>
-                        <a class="collapse-item" href="">Archive Appointments</a>
+                        <a class="collapse-item" href="{% url 'staff:archived_appointment_list_view' %}">Archive Appointments</a>
                     </div>
                 </div>
             </li>
