Coding javascript for data validation in pet checkup form.

--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -415,10 +415,10 @@
         {% endblock %}
         
          <!-- Footer -->
-         <footer class="sticky-footer bg-white">
+         <footer class="sticky-footer" style="background-color: #A9A9A9;">
           <div class="container my-auto">
               <div class="copyright text-center my-auto">
-                  <span>Copyright &copy; EliteBuilders 2021</span>
+                  <span style="color: black;">Copyright &copy; EliteBuilders 2021</span>
               </div>
           </div>
       </footer>
