Coding backend for saving add result in doctors dashboard.

--- a/doctors/templates/doctors/pages/pets_list.html
+++ b/doctors/templates/doctors/pages/pets_list.html
@@ -82,9 +82,9 @@
                              
                               <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="{% url 'doctors:checkup_view' %}?pet_id={{pet.id}}"><i class="fas fa-diagnoses"></i> Checkup this pet</a>
-                              <a class="dropdown-item" href="{% url 'doctors:checkup_result_and_history_view' %}?pet_id={{pet.id}}"><i class="fa fa-history" aria-hidden="true"></i> Checkup and Result history</a>
+                              <a class="dropdown-item" href="{% url 'doctors:checkup_result_and_history_view' %}?pet_id={{pet.id}}"><i class="fa fa-prescription" aria-hidden="true"></i> Checkup and Result history</a>
                               <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fas fa-prescription"></i> Prescriptions</a>
+      
                             </div>
                           </div>
                       </div>
