Coding for checkup result history update in doctors dashboard.

--- a/doctors/templates/doctors/pages/pets_list.html
+++ b/doctors/templates/doctors/pages/pets_list.html
@@ -1,4 +1,7 @@
 {% extends 'doctors/doctors_base_layout/layout.html' %}
+{% block title %}
+    Pet List
+{% endblock %}
 {% block content %}
 <div class="container">
   <div class="row">
