--- a/doctors/templates/doctors/pages/view_checkup_result_history.html
+++ b/doctors/templates/doctors/pages/view_checkup_result_history.html
@@ -12,7 +12,7 @@
         <div class="col-8">
             <div class="row">
                 <img id = "logo" style="display:none; height: 50px; width: 200px; margin-left: 20px; margin-bottom: 10px; margin-right: 20px;" class = "img-fluid logo"  src="{% static 'Images/LOGO.png' %}" alt="BEASTFRIEND LOGO">
-                <h2>Check Up Result History</h2>
+                <h2>Checkup Result History</h2>
             </div>
         </div>
         <div class="col-4 d-flex justify-content-end">
@@ -568,8 +568,14 @@
     {% endif %}
 </div>
 <div class="d-flex justify-content-end col-md-12" style="margin-top: 20px;">
-    {% if checkup.body_weight != null %}<button onclick = "printdev('printableArea')" class="btn btn-secondary align-self-end" style="margin-right: 70px;">Print</button>{% endif %}
-    {% if checkup.body_weight == null %}<button id = "add_result" onclick="add_result(this)" class="btn btn-info align-self-end" style="margin-right: 70px;">Add Result</button>{% endif %}
+    {% if checkup.body_weight != null %}
+        <button onclick = "printdev('printableArea')" class="btn btn-secondary align-self-end" style="margin-right: 70px;">Print</button>
+        <a href="{% url 'doctors:update_checkup_result_history_view' %}?id={{checkup.id}}" class="btn btn-warning btn-md align-self-end" style="margin-right: 70px;">Update</a>
+    {% endif %}
+    {% if checkup.body_weight == null %}
+        <button id = "add_result" onclick="add_result(this)" class="btn btn-info align-self-end" style="margin-right: 70px;">Add Result</button>
+        <a id = "update" href="{% url 'doctors:update_checkup_result_history_view' %}?id={{checkup.id}}" class="btn btn-warning btn-md align-self-end" style="margin-right: 70px;">Update</a>
+    {% endif %}
 </div>
 <br>
 <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
@@ -607,10 +613,12 @@
         function add_result(button){
             $(button).hide();
             $('#add_result_form').show();
+            $('#update').hide();
         }
         function cancel(button){
             $('#add_result_form').hide();
             $('#add_result').show();
+            $('#update').show();
         }
         function printdev(div){
             $("#logo").show();
